fix(member): close tenant access boundaries